--- a/style.css
+++ b/style.css
@@ -13,10 +13,6 @@ body {
 .header h1 {
     color: red;
 }
-
-
-
-
 .main {
     display: flex;
     justify-content: center; 
@@ -138,9 +134,9 @@ input[type="checkbox"]:checked + span::before {
 
 .dropdown-content .button-container {
     display: flex;
-    justify-content: flex-end; /* Aligns the button to the right */
-    width: 100%; /* Takes full width of the dropdown content */
-    margin-top: 20px; /* Creates some space above the button */
+    justify-content: flex-end; 
+    width: 100%; 
+    margin-top: 20px; 
 
 }
 
@@ -163,3 +159,7 @@ input[type="checkbox"]:checked + span::before {
 }
 
 /* საფასო კატეგორია */
+
+.price-dropdown{
+    position: relative;
+}
