--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     justify-content: center; 
     top: 177px;
     left: 162px;
-    position: fixed;
+    /* position: fixed; */
 }
 
 .search-bar {
@@ -522,94 +522,95 @@ body.modal-open {
     background-color: white;
     padding: 30px;
     border-radius: 12px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 800px;
     max-width: 90%;
     max-height: 90vh;
     overflow-y: auto;
 }
 
-  
-  .agent-form-title {
+.agent-form-title {
     text-align: center;
     color: #333;
     margin-bottom: 30px;
-  }
-  
-  .agent-form {
+}
+
+.agent-form {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-  }
-  
-  .agent-form-column {
+}
+
+.agent-form-column {
     width: 48%;
-  }
-  
-  .agent-form-group {
+    
+}
+
+.agent-form-group {
     margin-bottom: 20px;
-  }
-  
-  .agent-form-group-full {
     width: 100%;
-  }
-  
-  .agent-form-label {
+}
+
+.agent-form-label {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
-  }
-  
-  .agent-form-input {
+}
+
+.agent-form-input {
     width: 100%;
     padding: 8px;
     border: 1px solid #ddd;
     border-radius: 4px;
     box-sizing: border-box;
-  }
-  
-  .agent-form-hint {
+    
+}
+
+.agent-form-group input{
+    width: 100%;
+}
+
+.agent-form-hint {
     font-size: 12px;
     color: #888;
     margin-top: 5px;
-  }
-  
-  .agent-form-file-upload {
+}
+
+.agent-form-file-upload {
     border: 2px dashed #ddd;
     padding: 20px;
     text-align: center;
     cursor: pointer;
-    width: 100%;
-    box-sizing: border-box;
     margin-top: 20px;
-  }
-  
-  .agent-form-button-group {
+}
+
+.agent-form-button-group {
     display: flex;
     justify-content: flex-end;
     margin-top: 20px;
     width: 100%;
-  }
-  
-  .agent-form-btn {
+}
+
+.agent-form-btn {
     padding: 10px 20px;
     border-radius: 8px;
     cursor: pointer;
     font-weight: bold;
-  }
-  
-  .agent-form-btn-cancel {
+}
+
+.agent-form-btn-cancel {
     background-color: white;
     color: #f93b1d;
     border: 1px solid #f93b1d;
     margin-right: 10px;
-  }
-  
-  .agent-form-btn-submit {
+}
+
+.agent-form-btn-submit {
     background-color: #f93b1d;
     color: white;
     border: none;
-  }
+}
+
   
   
 /* add agent */
@@ -617,15 +618,29 @@ body.modal-open {
 
 /* cards */
 
-.cards-component{
-    width: 1596px;
-    height: 1230px;
-    top: 301px;
-    left: 162px;
-    padding: 0px 0px 300px 0px;
-    gap: 20px;
-    border: solid red 1px;
+.cards-component {
+padding-top: 30px;
+display: grid;
+grid-template-columns: repeat(4, 1fr); 
+grid-gap: 20px; 
+width: 1596px;
+height: 1230px;
 }
+
+.cards {
+width: 384px;
+height: 455px;
+border: 1px solid red;
+box-sizing: border-box;
+}
+.wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+  
+
+
 
 
 /* cards */
