--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .header h1 {
-    color: red;
+    color: #F93B1D;
 }
 .main {
     padding-top: 20px;
@@ -604,7 +604,7 @@ body.modal-open {
     padding: 10px 20px;
     border-radius: 8px;
     cursor: pointer;
-    font-weight: bold;
+   
 }
 
 .agent-form-btn-cancel {
