--- a/listingpage.css
+++ b/listingpage.css
@@ -174,7 +174,7 @@ body {
 }
 
 .property-card {
-    flex: 0 0 calc(25% - 15px); /* 4 items per view, with some gap */
+    flex: 0 0 calc(25% - 15px); 
     margin-right: 20px;
     border: 1px solid #DBDBDB;
     border-radius: 10px;
@@ -196,7 +196,7 @@ body {
     position: absolute;
     top: 10px;
     left: 10px;
-    background-color: #F93B1D;
+    background-color:  #02152680;
     color: white;
     padding: 4px 8px;
     border-radius: 20px;
