--- a/addlisting.css
+++ b/addlisting.css
@@ -14,9 +14,14 @@ body {
 
 .header h1 {
     color: #F93B1D;
-    margin: 0;
+    cursor: pointer;
 }
 
+a {
+    text-decoration: none; 
+    color: inherit; 
+    cursor: inherit; 
+}
 .content-wrapper {
     width: 790px;
     margin: 40px auto;
