--- a/listingpage.css
+++ b/listingpage.css
@@ -14,6 +14,13 @@ body {
 .header h1 {
     color: #F93B1D;
     margin: 0;
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none; 
+    color: inherit; 
+    cursor: inherit; 
 }
 
 .container {
@@ -35,6 +42,7 @@ body {
     top: 96px;
     left: 14px;
     position: absolute;
+    cursor: pointer;
 }
 
 .main {
@@ -122,7 +130,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 400px;
+    width: 623px;
+    height: 222px;
     background-color: white;
     border-radius: 20px;
     padding: 20px;
