--- a/style.css
+++ b/style.css
@@ -14,6 +14,13 @@ body {
 
 .header h1 {
     color: #F93B1D;
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none; 
+    color: inherit; 
+    cursor: inherit; 
 }
 .main {
     padding-top: 20px;
@@ -514,6 +521,7 @@ body.modal-open {
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.3s ease, visibility 0.3s ease;
+    backdrop-filter: blur(5px);
 }
 
 .agent-modal.modal-active {
@@ -611,13 +619,18 @@ body.modal-open {
     border: 1px solid #f93b1d;
     margin-right: 10px;
 }
-
+.agent-form-btn-cancel:hover{
+    background-color: #f93b1d;
+    color: white;
+}
 .agent-form-btn-submit {
     background-color: #f93b1d;
     color: white;
     border: none;
 }
-
+.agent-form-btn-submit:hover{
+    background-color: hsl(8, 95%, 45%);
+}
   
   
 /* add agent */
