--- a/style.css
+++ b/style.css
@@ -637,29 +637,79 @@ body.modal-open {
 
 
 /* cards */
-
-.cards-component {
-padding-top: 30px;
-display: grid;
-grid-template-columns: repeat(4, 1fr); 
-grid-gap: 20px; 
-width: 1596px;
-height: 1230px;
-}
-
-.cards {
-width: 384px;
-height: 455px;
-border: 1px solid red;
-box-sizing: border-box;
-}
-.wrapper{
+  
+.wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 20px;
 }
-  
+.cards-component {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+}
 
+.cards {
+    width: 384px;
+    height: 455px;
+    border: 1px solid #ddd;
+    box-sizing: border-box;
+    background-color: #fff;
+    border-radius: 10px;
+    overflow: hidden;
+    
+}
+.cards:hover{
+    box-shadow: 5px 5px 12px 0px hsla(208, 90%, 8%, 0.078);
+    cursor: pointer;
+}
+
+
+.card-image img {
+    width: 384px;
+    height: 307px;
+    object-fit: cover;
+}
+
+.card-content {
+    width: 384px;
+    height: 148px;
+    padding: 22px 25px;
+    gap: 20px;
+}
+
+.card-title {
+    width: 334px;
+    height: 34px;
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.card-address {
+    width: 334px;
+    font-size: 14px;
+    color: #666;
+    margin-bottom: 10px;
+}
+
+.card-details {
+    width: 214px;
+    height: 24px;
+    opacity: 0px;
+    font-size: 12px;
+    color: #333;
+    display: flex;
+    justify-content: flex-start;
+    gap: 16px;
+}
+
+.card-details span {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
 
 
 
