--- a/style.css
+++ b/style.css
@@ -639,6 +639,82 @@ body.modal-open {
     background-color: hsl(8, 95%, 45%);
 }
   
+
+
+
+
+
+
+.agent-form-file-upload {
+    border: 2px dashed #E4E3EB;
+    border-radius: 12px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    position: relative;
+}
+
+.upload-placeholder {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.upload-icon {
+    font-size: 24px;
+    color: #1A1A1A;
+}
+
+.file-preview {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.preview-image {
+    width: 92px;
+    height: 82px;
+    object-fit: cover;
+}
+
+.remove-file {
+    position: absolute;
+    top: 90px;
+    left: 424px;
+    background: white;
+    border: none;
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+}
+
+.trash-icon {
+    width: 16px;
+    height: 16px;
+    
+}
+
+
+
+
+
+
+
+
   
 /* add agent */
 
