--- a/style.css
+++ b/style.css
@@ -256,6 +256,7 @@ input[type="checkbox"]:checked + span::before {
     padding: 8px;
     margin-bottom: 8px;
     border-radius: 4px;
+    cursor: pointer;
 }
 .price-btn {
     display: flex;
@@ -269,6 +270,10 @@ input[type="checkbox"]:checked + span::before {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    position: absolute;
+    right: 16px;
+    bottom: 16px;
+    border-radius: 10px;
 }
 
 
