--- a/style.css
+++ b/style.css
@@ -388,7 +388,8 @@ input[type="checkbox"]:checked + span::before {
 
 .area-selector {
     display: none;
-    width: 400px;
+    width: 382px;
+    height: 382px;
     padding: 24px;
     border: 1px solid #DBDBDB;
     border-radius: 10px;
@@ -405,13 +406,15 @@ input[type="checkbox"]:checked + span::before {
 
 h3 {
     font-size: 16px;
-    margin-bottom: 16px;
+    
 }
 
 .area-inputs {
     display: flex;
     justify-content: space-between;
     margin-bottom: 16px;
+    width: 325px;
+    height: 42px;
 }
 
 .input-group {
@@ -421,40 +424,59 @@ h3 {
 }
 
 input[type="text"] {
-    width: 100px;
-    height: 35px;
+    width: 155px;
+    height: 42px;
     padding: 8px;
     font-size: 14px;
     border: 1px solid #DBDBDB;
     border-radius: 5px;
-    text-align: center;
 }
 
 .area-options {
     display: flex;
     justify-content: space-between;
     margin-bottom: 16px;
+    width: 334px;
+    height: 160px;
 }
 
-.area-column {
+.area-column-left {
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    width: 155px;
+    height: 160px;
+    gap: 10px; 
 }
 
-.area-column h4 {
-    font-size: 14px;
+.area-column-right {
+    display: flex;
+    flex-direction: column;
+    width: 155px;
+    height: 160px;
+    gap: 10px; 
+}
+
+
+.area-column-left h4 {
+    font-size: 16px;
+    margin-bottom: 8px;
+}
+
+.area-column-right h4 {
+    font-size: 16px;
     margin-bottom: 8px;
 }
 
 .area-option {
-    font-size: 14px;
+    font-size: 16px;
+    cursor: pointer;
+    
 }
 
 .area-choose {
     width: 77px;
     height: 33px;
-    background-color: #FF5722;
+    background-color: #f93b1d;
     color: white;
     padding: 8px 16px;
     border: none;
@@ -462,14 +484,24 @@ input[type="text"] {
     cursor: pointer;
     font-size: 14px;
     text-align: center;
+    margin-top: 35px;
+    position: absolute;
+    bottom: 24px;
+    right: 24px;
+    
 }
 
 .area-choose:hover {
-    background-color: #e64a19;
+    background-color: hsl(8, 95%, 45%);
 }
 
+.area-button .arrow {
+    transition: transform 0.3s ease;
+}
 
-
+.area-button.active .arrow {
+    transform: rotate(180deg);
+}
 
 /* partobi */
 
