--- a/listingpage.css
+++ b/listingpage.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     font-family: 'Helvetica Neue', sans-serif;
     font-size: 16px;
+    overflow-x: hidden;
 }
 
 .header {
